--- a/onlineshop/src/main/resources/templates/profile.html
+++ b/onlineshop/src/main/resources/templates/profile.html
@@ -20,6 +20,7 @@
             <a class="profile-menu-link" th:href="@{/users/profile}">Данни за профила</a>
             <a class="profile-menu-link" th:href="@{/users/my-orders}">Моите поръчки</a>
             <a class="profile-menu-link" th:href="@{/users/my-addresses}">Моите адреси</a>
+            <a class="profile-menu-link" th:href="@{/users/my-opinions}">Моите мнения</a>
             <a class="profile-menu-link" th:href="@{/exchange-or-return}">Замяна или връщане</a>
             <a class="profile-menu-link" th:href="@{/users/favourites}">Любими</a>
             <a class="profile-menu-link" th:href="@{/contacts}">Връзка с нас</a>
