--- a/onlineshop/src/main/resources/templates/brands.html
+++ b/onlineshop/src/main/resources/templates/brands.html
@@ -16,95 +16,150 @@
         <h1>Всички марки</h1>
 
         <div class="all-brands-section">
-            <div>
-                <a><img src="/images/brands/brand-nike-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/nike}">
+                    <img src="/images/brands/brand-nike-dark.svg" alt="Nike" title="Nike">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-adidas-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/adidas}">
+                    <img src="/images/brands/brand-adidas-dark.svg" alt="Adidas" title="Adidas">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-puma-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/puma}">
+                    <img src="/images/brands/brand-puma-dark.svg" alt="Puma" title="Puma">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-guess-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/guess}">
+                    <img src="/images/brands/brand-guess-dark.svg" alt="Guess" title="Guess">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-skechers-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/skechers}">
+                    <img src="/images/brands/brand-skechers-dark.svg" alt="Skechers" title="Skechers">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-salomon-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/salomon}">
+                    <img src="/images/brands/brand-salomon-dark.svg" alt="Salomon" title="Salomon">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-reebok-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/reebok}">
+                    <img src="/images/brands/brand-reebok-dark.svg" alt="Reebok" title="Reebok">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-new-balance-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/new-balance}">
+                    <img src="/images/brands/brand-new-balance-dark.svg" alt="New Balance" title="New Balance">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-calvin-klein-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/calvin-klein}">
+                    <img src="/images/brands/brand-calvin-klein-dark.svg" alt="Calvin Klein" title="Calvin Klein">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-champion-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/champion}">
+                    <img src="/images/brands/brand-champion-dark.svg" alt="Champion" title="Champion">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-asics-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/asics}">
+                    <img src="/images/brands/brand-asics-dark.svg" alt="Asics" title="Asics">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-tommy-hilfiger-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/tommy-hilfiger}">
+                    <img src="/images/brands/brand-tommy-hilfiger-dark.svg" alt="Tommy Hilfiger" title="Tommy Hilfiger">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-timberland-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/timberland}">
+                    <img src="/images/brands/brand-timberland-dark.svg" alt="Timberland" title="Timberland">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-lacoste-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/lacoste}">
+                    <img src="/images/brands/brand-lacoste-dark.svg" alt="Lacoste" title="Lacoste">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-converse-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/converse}">
+                    <img src="/images/brands/brand-converse-dark.svg" alt="Converse" title="Converse">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-the-north-face-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/the-north-face}">
+                    <img src="/images/brands/brand-the-north-face-dark.svg" alt="The North Face" title="The North Face">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-napapijri-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/napapijri}">
+                    <img src="/images/brands/brand-napapijri-dark.svg" alt="Napapijri" title="Napapijri">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-us-polo-assn-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/us-polo-assn}">
+                    <img src="/images/brands/brand-us-polo-assn-dark.svg" alt="Us Polo Assn" title="US Polo ASSN">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-champion-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/columbia}">
+                    <img src="/images/brands/brand-columbia-dark.svg" alt="Columbia" title="Columbia">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-columbia-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/caterpillar}">
+                    <img src="/images/brands/brand-caterpillar-dark.svg" alt="Caterpillar" title="Caterpillar">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-caterpillar-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/diadora}">
+                    <img src="/images/brands/brand-diadora-dark.svg" alt="Diadora" title="Diadora">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-diadora-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/fila}">
+                    <img src="/images/brands/brand-fila-dark.svg" alt="Fila" title="Fila">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-timberland-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/kappa}">
+                    <img src="/images/brands/brand-kappa-dark.svg" alt="Kappa" title="Kappa">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-fila-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/crocks}">
+                    <img src="/images/brands/brand-crocks-dark.svg" alt="Crocks" title="Crocks">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-kappa-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/palladium}">
+                    <img src="/images/brands/brand-palladium-dark.svg" alt="Palladium" title="Palladium">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-crocks-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/reef}">
+                    <img src="/images/brands/brand-reef-dark.svg" alt="Reef" title="Reef">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-palladium-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/rip-curl}">
+                    <img src="/images/brands/brand-rip-curl-dark.svg" alt="Rip Curl" title="Rip Curl">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-reef-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/lotto}">
+                    <img src="/images/brands/brand-lotto-dark.svg" alt="Lotto" title="Lotto">
+                </a>
             </div>
-            <div>
-                <a><img src="/images/brands/brand-rip-curl-dark.svg"></a>
-            </div>
-            <div>
-                <a><img src="/images/brands/brand-lotto-dark.svg"></a>
+            <div class="brand">
+                <a th:href="@{/products/brand/under-armor}">
+                    <img src="/images/brands/brand-under-armor-dark.svg" alt="Under Armor" title="Under Armor">
+                </a>
             </div>
         </div>
     </main>
