--- a/onlineshop/src/main/resources/static/css/brands-styles.css
+++ b/onlineshop/src/main/resources/static/css/brands-styles.css
@@ -1,17 +1,18 @@
 main .all-brands-section {
+    width: 100%;
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
-    gap: 1em;
+    gap: 1.4em;
 }
 
-main .all-brands-section div {
+main .all-brands-section .brand {
+    flex-basis: calc(100% / 6 - 1.5em);
     padding: 0.5em;
     border: 1px solid #ccc;
     border-radius: 1em;
 }
 
-main .all-brands-section div img {
+main .all-brands-section .brand img {
     height: 100px;
     object-fit: cover;
 }
