--- a/onlineshop/src/main/resources/static/css/products-styles.css
+++ b/onlineshop/src/main/resources/static/css/products-styles.css
@@ -1,7 +1,7 @@
 main .products-list {
     display: flex;
     justify-content: flex-start;
-    align-items: center;
+    align-items: stretch;
     gap: 1.5em;
 }
 
