--- a/onlineshop/src/main/resources/static/css/index-styles.css
+++ b/onlineshop/src/main/resources/static/css/index-styles.css
@@ -145,19 +145,33 @@ main .more-info-section .promo-code-form form {
     left: 9%;
 }
 
-main .more-info-section .promo-code-form p {
+main .more-info-section .promo-code-form .promo-code-msg {
     font-style: oblique;
     position: absolute;
-    top: 82%;
+    top: 80%;
     left: 9%;
 }
 
-main .more-info-section .promo-code-form p::before {
+main .more-info-section .promo-code-form .promo-code-msg::before {
     display: inline;
     content: '*';
     color: red;
     font-weight: 900;
     padding-right: 0.5em;
+}
+
+main .more-info-section .promo-code-form .success-msg {
+    color: #32CD32FF;
+    position: absolute;
+    top: 85%;
+    left: 9%;
+}
+
+main .more-info-section .promo-code-form .failure-msg {
+    color: #C00;
+    position: absolute;
+    top: 85%;
+    left: 9%;
 }
 
 main .more-info-section .promo-code-form form input {
